--- a/client/app/public/index.html
+++ b/client/app/public/index.html
@@ -39,5 +39,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas nam odit quasi recusandae optio accusamus libero unde suscipit, similique id dolorum quos eos et accusantium sint ipsa minus ut impedit!</p>
   </body>
 </html>
